--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,7 @@ gspread==5.12.0
 oauth2client==4.1.3
 natsort==8.4.0
 pyserial==3.5
-gpiod==1.6.3 
+gpiod==1.6.3
+matplotlib==3.8.2
+pandas==2.2.0
+numpy==1.26.3 
